--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -129,7 +129,7 @@
 
   {%- if network[0] == "linkedin" -%}
   <li class="list-inline-item">
-    <a href="https://linkedin.com/in/{{ network[1] }}" title="LinkedIn">
+    <a href="https://linkedin.com/{{ network[1] }}" title="LinkedIn">
       <span class="fa-stack fa-lg" aria-hidden="true">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
